--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@
         id 'org.jetbrains.kotlin.android'
         // Kapt plugin
         id 'kotlin-kapt'
+        //id "com.google.devtools.ksp"
     }
 
     android {
@@ -18,7 +19,9 @@
 
             testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         }
-
+        buildFeatures {
+            viewBinding = true
+        }
         buildTypes {
             release {
                 minifyEnabled false
@@ -40,9 +43,11 @@
 
         implementation "androidx.room:room-runtime:$room_version"
         annotationProcessor "androidx.room:room-compiler:$room_version"
+        implementation "androidx.room:room-ktx:$room_version"
 
         // To use Kotlin annotation processing tool (kapt)
         kapt "androidx.room:room-compiler:$room_version"
+        //ksp "androidx.room:room-compiler:$room_version"
 
         // optional - Test helpers
         testImplementation "androidx.room:room-testing:$room_version"
