--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,13 @@
     }
 
     dependencies {
+        // Dagger
+        implementation 'com.google.dagger:dagger:2.28.3'
+        kapt 'com.google.dagger:dagger-compiler:2.28.3'
+
+        // koin
+        //implementation("io.insert-koin:koin-core:3.5.0")
+        //implementation("io.insert-koin:koin-android:3.5.0")
 
         def room_version = "2.5.2"
 
