--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,9 @@
     }
 
     dependencies {
-        def nav_version = "2.7.1"
-        // Kotlin
-    //    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    //    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+        implementation 'com.squareup.picasso:picasso:2.71828'
 
+        def nav_version = "2.7.1"
         implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
         implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
