--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,13 @@
 
             testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         }
+        buildFeatures {
+            compose true
+        }
+
+        composeOptions {
+            kotlinCompilerExtensionVersion '1.4.3'
+        }
 
         buildTypes {
             release {
@@ -33,6 +40,14 @@
     }
 
     dependencies {
+        // Jetpack Compose
+        implementation("androidx.activity:activity-compose:1.7.2")
+        implementation(platform("androidx.compose:compose-bom:2023.03.00"))
+        implementation("androidx.compose.ui:ui")
+        implementation("androidx.compose.ui:ui-graphics")
+        implementation("androidx.compose.ui:ui-tooling-preview")
+        implementation("androidx.compose.material3:material3")
+
         implementation 'com.squareup.picasso:picasso:2.71828'
 
         def nav_version = "2.7.1"
