--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@
     }
 
     dependencies {
+        // NavHost compose
+        implementation "androidx.navigation:navigation-compose:2.7.3"
+
         // Jetpack Compose
         implementation("androidx.activity:activity-compose:1.7.2")
         implementation(platform("androidx.compose:compose-bom:2023.03.00"))
@@ -47,6 +50,22 @@
         implementation("androidx.compose.ui:ui-graphics")
         implementation("androidx.compose.ui:ui-tooling-preview")
         implementation("androidx.compose.material3:material3")
+
+
+        implementation("androidx.activity:activity-compose:1.7.2")
+        implementation(platform("androidx.compose:compose-bom:2023.03.00"))
+        implementation("androidx.compose.ui:ui")
+        implementation("androidx.compose.ui:ui-graphics")
+        implementation("androidx.compose.ui:ui-tooling-preview")
+        implementation("androidx.compose.material3:material3")
+
+        androidTestImplementation(platform("androidx.compose:compose-bom:2023.03.00"))
+        androidTestImplementation("androidx.compose.ui:ui-test-junit4")
+        debugImplementation("androidx.compose.ui:ui-tooling")
+        debugImplementation("androidx.compose.ui:ui-test-manifest")
+
+        //implementation "androidx.compose.material:material:1.5.1"
+        //implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0-alpha02"
 
         implementation 'com.squareup.picasso:picasso:2.71828'
 
