--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,10 @@
     }
 
     dependencies {
+        implementation "androidx.work:work-runtime:2.8.1"
+
         // NavHost compose
-        implementation "androidx.navigation:navigation-compose:2.7.3"
+        implementation("androidx.navigation:navigation-compose:2.6.0")
 
         // Jetpack Compose
         implementation("androidx.activity:activity-compose:1.7.2")
@@ -58,6 +60,7 @@
         implementation("androidx.compose.ui:ui-graphics")
         implementation("androidx.compose.ui:ui-tooling-preview")
         implementation("androidx.compose.material3:material3")
+        implementation 'androidx.work:work-runtime-ktx:2.8.1'
 
         androidTestImplementation(platform("androidx.compose:compose-bom:2023.03.00"))
         androidTestImplementation("androidx.compose.ui:ui-test-junit4")
