--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,15 +49,9 @@
         implementation("androidx.compose.ui:ui")
         implementation("androidx.compose.ui:ui-graphics")
         implementation("androidx.compose.ui:ui-tooling-preview")
-        implementation("androidx.compose.material3:material3")
+        //implementation("androidx.compose.material3:material3")
+        implementation "androidx.compose.material:material:1.5.1"
 
-
-        implementation("androidx.activity:activity-compose:1.7.2")
-        implementation(platform("androidx.compose:compose-bom:2023.03.00"))
-        implementation("androidx.compose.ui:ui")
-        implementation("androidx.compose.ui:ui-graphics")
-        implementation("androidx.compose.ui:ui-tooling-preview")
-        implementation("androidx.compose.material3:material3")
 
         androidTestImplementation(platform("androidx.compose:compose-bom:2023.03.00"))
         androidTestImplementation("androidx.compose.ui:ui-test-junit4")
